elegant objects, temporal coupling

--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -1226,8 +1226,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T21:51:50.197732Z",
-     "start_time": "2025-09-04T21:51:49.288298Z"
+     "end_time": "2025-09-09T12:36:55.659125Z",
+     "start_time": "2025-09-09T12:36:54.344185Z"
     }
    },
    "cell_type": "code",
@@ -1247,7 +1247,7 @@
     "val fiveKey = MoneyKey(5)\n",
     "safe.put(fiveKey.copy(dollars = fiveKey.dollars * 2), \"ten-again\")\n",
     "\n",
-    "println(safe)                 // Map($5 -> five, $10 -> ten, $10 -> ten-again)\n",
+    "println(safe)                 // Map($5 -> five, $10 -> ten-again)\n",
     "println(safe.get(MoneyKey(10))) // deterministic and consistent\n"
    ],
    "id": "c17cfa8844d6fa06",
@@ -1272,18 +1272,18 @@
        "  \u001B[33mMoneyKey\u001B[39m(dollars = \u001B[32m5\u001B[39m) -> \u001B[32m\"five\"\u001B[39m,\n",
        "  \u001B[33mMoneyKey\u001B[39m(dollars = \u001B[32m10\u001B[39m) -> \u001B[32m\"ten-again\"\u001B[39m\n",
        ")\n",
-       "\u001B[36mres38_3\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m\n",
-       "\u001B[36mres38_4\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m\n",
+       "\u001B[36mres5_3\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m\n",
+       "\u001B[36mres5_4\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m\n",
        "\u001B[36mfiveKey\u001B[39m: \u001B[32mMoneyKey\u001B[39m = \u001B[33mMoneyKey\u001B[39m(dollars = \u001B[32m5\u001B[39m)\n",
-       "\u001B[36mres38_6\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[33mSome\u001B[39m(value = \u001B[32m\"ten\"\u001B[39m)"
+       "\u001B[36mres5_6\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[33mSome\u001B[39m(value = \u001B[32m\"ten\"\u001B[39m)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 38
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -1530,9 +1530,350 @@
     "4. Prefer immutable value objects (case classes) for operations that transform state; return new instances.\n",
     "5. If mutability is unavoidable (performance / interoperability), isolate it behind a tiny API and rigorously maintain invariants.\n",
     "\n",
-    "Failure atomicity reduces debugging time, increases trust in invariants, and keeps methods focused on domain logic instead of state management scaffolding.\n"
+    "Failure atomicity reduces debugging time, increases trust in invariants, and keeps methods focused on domain logic instead of state management scaffolding."
    ],
-   "id": "84bcba6e32e7187e"
+   "id": "46716e6515bbe80c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 2.6.3 Temporal coupling\n",
+    "\n",
+    "Temporal coupling happens when the correctness of code depends on the chronological order of separate statements that manipulate the same (mutable) object. The object is born incomplete, then gradually “filled in” via setters or mutators. Rearranging or omitting any of those statements silently breaks logic while still compiling.\n",
+    "\n",
+    "Immutability eliminates this category of risk by forcing full initialization at construction time: one expression creates a complete, valid object. There is nothing to “remember” about sequencing afterwards.\n"
+   ],
+   "id": "9afeb960e50345dc"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 1. Mutable (JavaBean‑style) object requiring ordered setters\n",
+   "id": "e54785647f2b1c4e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-09T12:58:42.854838Z",
+     "start_time": "2025-09-09T12:58:42.071640Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "// A mutable bean-like Cash with temporal coupling in its usage\n",
+    "final class CashBean {\n",
+    "  private var dollars: Int = 0     // starts uninitialized (semantic NULL)\n",
+    "  private var cents: Int   = 0\n",
+    "  def setDollars(d: Int): Unit = { dollars = d }\n",
+    "  def setCents(c: Int): Unit = { cents = c }\n",
+    "  override def toString: String = f\"$$${dollars}%d.${cents}%02d\"\n",
+    "}\n",
+    "\n",
+    "// Correct order (instantiate, then set both, then use)\n",
+    "val bean = new CashBean()\n",
+    "bean.setDollars(29)\n",
+    "bean.setCents(95)\n",
+    "println(s\"Correct:  $bean\")  // \"$29.95\"\n"
+   ],
+   "id": "867c8541c95e99c0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct:  $29.95\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCashBean\u001B[39m\n",
+       "\u001B[36mbean\u001B[39m: \u001B[32mCashBean\u001B[39m = $29.95"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Reordering still compiles, but produces the wrong result because printing happens before full initialization:\n",
+   "id": "f4643a5a1f22b2c0"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-09T12:58:46.699418Z",
+     "start_time": "2025-09-09T12:58:46.019114Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "val beanWrong = new CashBean()\n",
+    "beanWrong.setDollars(29)\n",
+    "println(s\"Printed too early:  $beanWrong\") // \"$29.00\" (cents not set yet)\n",
+    "beanWrong.setCents(95)                     // Late; no compiler/runtime warning\n"
+   ],
+   "id": "61a48d8113539c1b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printed too early:  $29.00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001B[36mbeanWrong\u001B[39m: \u001B[32mCashBean\u001B[39m = $29.95"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 2. Temporal coupling amplified by distance\n",
+    "\n",
+    "Distance (other logic between setter calls) makes coupling harder to spot:\n"
+   ],
+   "id": "8d049fc7e1b20f8c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-09T13:03:23.784802Z",
+     "start_time": "2025-09-09T13:03:22.955517Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "val distant = new CashBean()\n",
+    "// 1) some unrelated logic (pretend this block is large & complicated)\n",
+    "val xs = (1 to 100).map(_ * 2).sum // noise before real initialization\n",
+    "// 2) first part of initialization\n",
+    "val x = 42 // pretend we computed this; irrelevant\n",
+    "// Set dollars derived from some earlier computation\n",
+    "val computedDollars = 17 + 12\n",
+    "distant.setDollars(computedDollars)\n",
+    "\n",
+    "// 50 lines later (imagine transformations, conditionals, loops, logging, etc.)\n",
+    "val ys = (1 to 50).filter(_ % 7 == 0).sum // more noise\n",
+    "// Only now we finally remember to set cents\n",
+    "val computedCents = 95\n",
+    "distant.setCents(computedCents)\n",
+    "\n",
+    "// If someone moves this print higher (above setCents) they introduce a bug that still compiles\n",
+    "println(s\"Distant: $distant\")\n"
+   ],
+   "id": "252fe5c438719d01",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distant: $29.95\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001B[36mdistant\u001B[39m: \u001B[32mCashBean\u001B[39m = $29.95\n",
+       "\u001B[36mxs\u001B[39m: \u001B[32mInt\u001B[39m = \u001B[32m10100\u001B[39m\n",
+       "\u001B[36mx\u001B[39m: \u001B[32mInt\u001B[39m = \u001B[32m42\u001B[39m\n",
+       "\u001B[36mcomputedDollars\u001B[39m: \u001B[32mInt\u001B[39m = \u001B[32m29\u001B[39m\n",
+       "\u001B[36mys\u001B[39m: \u001B[32mInt\u001B[39m = \u001B[32m196\u001B[39m\n",
+       "\u001B[36mcomputedCents\u001B[39m: \u001B[32mInt\u001B[39m = \u001B[32m95\u001B[39m"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "At every maintenance step, a reader must mentally reconstruct the implicit ordering contract: “all setters must run before any use.” The compiler can’t help.\n",
+    "\n",
+    "Problems:\n",
+    "- Objects exist in a transient, invalid state for a period of time.\n",
+    "- Readability & refactor safety degrade as distance grows.\n",
+    "- Partial initialization bugs are silent (no type signal, no runtime exception).\n",
+    "- Parallelizing or reordering logic becomes risky.\n"
+   ],
+   "id": "4dd2f590f80f7c5e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 3. Immutable value object (no temporal coupling)\n",
+   "id": "56c151772050990"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-09T12:58:55.850361Z",
+     "start_time": "2025-09-09T12:58:55.040612Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "// Immutable: fully initialized at construction, validated once\n",
+    "final case class CashImmutableTemporal(dollars: Int, cents: Int) {\n",
+    "  require(dollars >= 0, \"dollars must be non-negative\")\n",
+    "  require(cents >= 0 && cents < 100, \"cents must be 0..99\")\n",
+    "  override def toString: String = f\"$$$dollars%d.$cents%02d\"\n",
+    "\n",
+    "  // Transformation returns a NEW object instead of mutating\n",
+    "  def plus(other: CashImmutableTemporal): CashImmutableTemporal = {\n",
+    "    val totalCents = this.cents + other.cents\n",
+    "    val carry = totalCents / 100\n",
+    "    CashImmutableTemporal(this.dollars + other.dollars + carry, totalCents % 100)\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "val price  = CashImmutableTemporal(29, 95)\n",
+    "val tax    = CashImmutableTemporal( 0,  80)\n",
+    "val total  = price.plus(tax)\n",
+    "println(s\"Price: $price  Tax: $tax  Total: $total\")\n"
+   ],
+   "id": "9896d1379a3fb0f3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price: $29.95  Tax: $0.80  Total: $30.75\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCashImmutableTemporal\u001B[39m\n",
+       "\u001B[36mprice\u001B[39m: \u001B[32mCashImmutableTemporal\u001B[39m = \u001B[33mCashImmutableTemporal\u001B[39m(dollars = \u001B[32m29\u001B[39m, cents = \u001B[32m95\u001B[39m)\n",
+       "\u001B[36mtax\u001B[39m: \u001B[32mCashImmutableTemporal\u001B[39m = \u001B[33mCashImmutableTemporal\u001B[39m(dollars = \u001B[32m0\u001B[39m, cents = \u001B[32m80\u001B[39m)\n",
+       "\u001B[36mtotal\u001B[39m: \u001B[32mCashImmutableTemporal\u001B[39m = \u001B[33mCashImmutableTemporal\u001B[39m(dollars = \u001B[32m30\u001B[39m, cents = \u001B[32m75\u001B[39m)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "You can’t “forget” to set cents: the constructor forces both dollars and cents to be provided. There is no legal intermediate state, and usage order is irrelevant beyond standard data dependencies.\n",
+    "\n",
+    "Benefits:\n",
+    "- Construction is atomic: one expression yields a valid object.\n",
+    "- Order independence: no hidden sequencing contract to remember.\n",
+    "- Fewer states to test (no half-initialized permutations).\n",
+    "- Referential transparency of transformations (price.plus(tax) is pure).\n"
+   ],
+   "id": "ec2643322babb2b6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 4. Eliminating temporal coupling with micro value objects\n",
+    "\n",
+    "Even if values come from distant computations, produce tiny immutable intermediates and compose them once:\n"
+   ],
+   "id": "eac5803b93ce3fc"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-09T13:06:16.330419Z",
+     "start_time": "2025-09-09T13:06:15.582729Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "final case class Dollars(value: Int) { require(value >= 0) }\n",
+    "final case class Cents(value: Int)   { require(value >= 0 && value < 100) }\n",
+    "final case class Price(parts: (Dollars, Cents)) {\n",
+    "  private val (d, c) = parts\n",
+    "  override def toString: String = f\"$$${d.value}%d.${c.value}%02d\"\n",
+    "}\n",
+    "\n",
+    "// Simulate distant computations\n",
+    "val dPart: Dollars = { /* many lines... */ Dollars(29) }\n",
+    "val cPart: Cents   = { /* many more lines... */ Cents(95) }\n",
+    "// Composition happens once, at the point of actual need\n",
+    "val composed = Price(dPart -> cPart)\n",
+    "println(s\"Composed price: $composed\")\n"
+   ],
+   "id": "49bf21809280f0d6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Composed price: $29.95\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mDollars\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCents\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mPrice\u001B[39m\n",
+       "\u001B[36mdPart\u001B[39m: \u001B[32mDollars\u001B[39m = \u001B[33mDollars\u001B[39m(value = \u001B[32m29\u001B[39m)\n",
+       "\u001B[36mcPart\u001B[39m: \u001B[32mCents\u001B[39m = \u001B[33mCents\u001B[39m(value = \u001B[32m95\u001B[39m)\n",
+       "\u001B[36mcomposed\u001B[39m: \u001B[32mPrice\u001B[39m = \u001B[33mPrice\u001B[39m(parts = (\u001B[33mDollars\u001B[39m(value = \u001B[32m29\u001B[39m), \u001B[33mCents\u001B[39m(value = \u001B[32m95\u001B[39m)))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Each sub-object is itself already valid; final assembly remains a single, obvious step. There is still no temporal fragility—reordering dPart & cPart computations (if independent) does not risk a half-baked Price.\n",
+   "id": "44ef76f3ca87c536"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 5. Takeaways (Temporal Coupling)\n",
+    "\n",
+    "1. Mutable “bean” patterns force readers to memorize a correct sequence (instantiate → set all fields → use). That sequence is invisible to the type system.\n",
+    "2. Distance between setter calls hides bugs and discourages refactoring and reordering.\n",
+    "3. Immutable constructors collapse instantiation + initialization into a single, enforced step.\n",
+    "4. Pure transformation methods (returning new objects) keep objects always valid—no transitional states.\n",
+    "5. Micro value objects (Dollars, Cents) let you spread computations without re-introducing temporal coupling.\n",
+    "6. Less temporal coupling → easier parallelization, testing, and reasoning; fewer timing / order-of-operations defects.\n",
+    "\n",
+    "In short: immutability erases an entire class of ordering problems; the compiler helps you maintain invariants instead of relying on human memory.\n"
+   ],
+   "id": "1c1393e9482ef116"
   }
  ],
  "metadata": {
