elegant objects, side effect-free

--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -1728,8 +1728,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-09T12:58:55.850361Z",
-     "start_time": "2025-09-09T12:58:55.040612Z"
+     "end_time": "2025-09-10T11:29:40.013494Z",
+     "start_time": "2025-09-10T11:29:39.214748Z"
     }
    },
    "cell_type": "code",
@@ -1771,12 +1771,12 @@
        "\u001B[36mtotal\u001B[39m: \u001B[32mCashImmutableTemporal\u001B[39m = \u001B[33mCashImmutableTemporal\u001B[39m(dollars = \u001B[32m30\u001B[39m, cents = \u001B[32m75\u001B[39m)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -1805,8 +1805,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-09T13:06:16.330419Z",
-     "start_time": "2025-09-09T13:06:15.582729Z"
+     "end_time": "2025-09-10T11:38:43.742991Z",
+     "start_time": "2025-09-10T11:38:42.241076Z"
     }
    },
    "cell_type": "code",
@@ -1845,12 +1845,12 @@
        "\u001B[36mcomposed\u001B[39m: \u001B[32mPrice\u001B[39m = \u001B[33mPrice\u001B[39m(parts = (\u001B[33mDollars\u001B[39m(value = \u001B[32m29\u001B[39m), \u001B[33mCents\u001B[39m(value = \u001B[32m95\u001B[39m)))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 22
   },
   {
    "metadata": {},
@@ -1871,9 +1871,139 @@
     "5. Micro value objects (Dollars, Cents) let you spread computations without re-introducing temporal coupling.\n",
     "6. Less temporal coupling → easier parallelization, testing, and reasoning; fewer timing / order-of-operations defects.\n",
     "\n",
-    "In short: immutability erases an entire class of ordering problems; the compiler helps you maintain invariants instead of relying on human memory.\n"
+    "In short: immutability erases an entire class of ordering problems; the compiler helps you maintain invariants instead of relying on human memory."
    ],
-   "id": "1c1393e9482ef116"
+   "id": "b8714cf3844887d7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 2.6.4 Side effect-free\n",
+    "\n",
+    "A side effect is any observable mutation that escapes the scope where it happens. Mutable objects make accidental side effects easy: a method that *looks* like a pure printer can silently change its argument. This increases debugging time because every caller becomes a suspect."
+   ],
+   "id": "1ef3ed031a347483"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-10T12:00:52.834066Z",
+     "start_time": "2025-09-10T12:00:51.955104Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "// Mutable example: printing also mutates the argument (hidden side effect)\n",
+    "final class CashSide(private var dollars: Int) {\n",
+    "  def mul(f: Int): Unit = { dollars *= f }\n",
+    "  override def toString: String = s\"$$$dollars\"\n",
+    "}\n",
+    "\n",
+    "def printBad(price: CashSide): Unit = {\n",
+    "  println(s\"Today price is: $price\")\n",
+    "  price.mul(2)                // sneaky mutation\n",
+    "  println(s\"Buy now, tomorrow price is: $price\")\n",
+    "}\n",
+    "\n",
+    "val fiveSide = new CashSide(5)\n",
+    "printBad(fiveSide)\n",
+    "println(s\"After call (oops, changed): $fiveSide\")"
+   ],
+   "id": "ca36a895ec35a8f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today price is: $5\n",
+      "Buy now, tomorrow price is: $10\n",
+      "After call (oops, changed): $10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCashSide\u001B[39m\n",
+       "defined \u001B[32mfunction\u001B[39m \u001B[36mprintBad\u001B[39m\n",
+       "\u001B[36mfiveSide\u001B[39m: \u001B[32mCashSide\u001B[39m = $10"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Because `printBad` mutates its parameter, the caller observes an unexpected new value. Tracing this in a large code base is costly.",
+   "id": "7f46c91b7f2db920"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-10T12:03:06.566163Z",
+     "start_time": "2025-09-10T12:03:05.897959Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "// Immutable alternative: no hidden mutation, transformation is explicit\n",
+    "final case class CashPure(dollars: Int) {\n",
+    "  def mul(f: Int): CashPure = copy(dollars = dollars * f) // returns a NEW value\n",
+    "  override def toString: String = s\"$$$dollars\"\n",
+    "}\n",
+    "\n",
+    "def printPure(price: CashPure): Unit = {\n",
+    "  println(s\"Today price is: $price\")\n",
+    "  val tomorrow = price.mul(2)      // explicit new value\n",
+    "  println(s\"Buy now, tomorrow price is: $tomorrow\")\n",
+    "}\n",
+    "\n",
+    "val fivePure = CashPure(5)\n",
+    "printPure(fivePure)\n",
+    "println(s\"After call (still original): $fivePure\")"
+   ],
+   "id": "551e55c469a19aa2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today price is: $5\n",
+      "Buy now, tomorrow price is: $10\n",
+      "After call (still original): $5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCashPure\u001B[39m\n",
+       "defined \u001B[32mfunction\u001B[39m \u001B[36mprintPure\u001B[39m\n",
+       "\u001B[36mfivePure\u001B[39m: \u001B[32mCashPure\u001B[39m = \u001B[33mCashPure\u001B[39m(dollars = \u001B[32m5\u001B[39m)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 25
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Takeaways (Side effect-free):\n",
+    "- Hidden mutations create debugging noise; every use-site must be audited.\n",
+    "- Immutability guarantees arguments remain trustworthy after calls.\n",
+    "- Methods either return a new value (builder) or just act (manipulator) — never both.\n",
+    "- Favor explicit returned results over in-place modification; it localizes change and prevents surprises.\n"
+   ],
+   "id": "28327a6d31b5ac42"
   }
  ],
  "metadata": {
