--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -2001,9 +2001,219 @@
     "- Hidden mutations create debugging noise; every use-site must be audited.\n",
     "- Immutability guarantees arguments remain trustworthy after calls.\n",
     "- Methods either return a new value (builder) or just act (manipulator) — never both.\n",
-    "- Favor explicit returned results over in-place modification; it localizes change and prevents surprises.\n"
+    "- Favor explicit returned results over in-place modification; it localizes change and prevents surprises."
    ],
-   "id": "28327a6d31b5ac42"
+   "id": "7720316fa0eda4fd"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 2.6.5 No NULL references\n",
+    "NULL (or null) hides missing design: a field that can be null usually means an object is being used in more than one role. Instead of temporary \"unset\" state, model the absence explicitly or split responsibilities."
+   ],
+   "id": "2b2520bd02babb89"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-11T23:17:45.067741Z",
+     "start_time": "2025-09-11T23:17:43.221303Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "// Bad: nullable, mutable field with ad-hoc null checks\n",
+    "final class MutableUserBad(private val id: Int) {\n",
+    "  private var name: String = null // sentinel state\n",
+    "  def setName(n: String): Unit = { name = n }\n",
+    "  def greet(): String = if (name != null) s\"Hello, $name\" else \"Hello\" // repetitive null logic\n",
+    "}\n",
+    "\n",
+    "val bad = new MutableUserBad(1)\n",
+    "println(bad.greet())      // \"Hello\" (anonymous by implicit null)\n",
+    "bad.setName(\"Alice\")\n",
+    "println(bad.greet())      // \"Hello, Alice\" (state meaning changed)"
+   ],
+   "id": "da25a87c287236fb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hello, Alice\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mMutableUserBad\u001B[39m\n",
+       "\u001B[36mbad\u001B[39m: \u001B[32mMutableUserBad\u001B[39m = ammonite.$sess.cmd26$Helper$MutableUserBad@f239e4d"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Better: force construction with all required data (immutability ⇒ no null possible).",
+   "id": "19aefa8236f4d553"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-11T23:17:47.610190Z",
+     "start_time": "2025-09-11T23:17:46.901980Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "final case class PersonName(value: String) // tiny value object\n",
+    "final case class Person(id: Int, name: PersonName) {\n",
+    "  def greet: String = s\"Hello, ${name.value}\" // no conditional logic\n",
+    "}\n",
+    "\n",
+    "val p = Person(1, PersonName(\"Alice\"))\n",
+    "println(p.greet)"
+   ],
+   "id": "3b756fd4d7b10401",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Alice\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mPersonName\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mPerson\u001B[39m\n",
+       "\u001B[36mp\u001B[39m: \u001B[32mPerson\u001B[39m = \u001B[33mPerson\u001B[39m(id = \u001B[32m1\u001B[39m, name = \u001B[33mPersonName\u001B[39m(value = \u001B[32m\"Alice\"\u001B[39m))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 27
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "If absence is a real, domain concept, model it explicitly instead of encoding it as null.",
+   "id": "83b1880aedba9ad2"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-11T23:17:59.333610Z",
+     "start_time": "2025-09-11T23:17:58.561708Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sealed trait PersonRef { def greet: String }\n",
+    "final case class NamedPerson(id: Int, name: PersonName) extends PersonRef {\n",
+    "  override def greet: String = s\"Hello, ${name.value}\" }\n",
+    "final case class AnonymousPerson(id: Int) extends PersonRef {\n",
+    "  override def greet: String = \"Hello\" }\n",
+    "\n",
+    "val people: List[PersonRef] = List(NamedPerson(2, PersonName(\"Bob\")), AnonymousPerson(3))\n",
+    "people.foreach(p => println(p.greet))"
+   ],
+   "id": "8fe5b276200a6db",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Bob\n",
+      "Hello\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mtrait\u001B[39m \u001B[36mPersonRef\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mNamedPerson\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mAnonymousPerson\u001B[39m\n",
+       "\u001B[36mpeople\u001B[39m: \u001B[32mList\u001B[39m[\u001B[32mPersonRef\u001B[39m] = \u001B[33mList\u001B[39m(\n",
+       "  \u001B[33mNamedPerson\u001B[39m(id = \u001B[32m2\u001B[39m, name = \u001B[33mPersonName\u001B[39m(value = \u001B[32m\"Bob\"\u001B[39m)),\n",
+       "  \u001B[33mAnonymousPerson\u001B[39m(id = \u001B[32m3\u001B[39m)\n",
+       ")"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 29
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Option is acceptable when a value is truly optional, but keep it at the boundary—prefer distinct types when behavior changes.",
+   "id": "7aeaeee79f14bf96"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-11T23:18:02.140077Z",
+     "start_time": "2025-09-11T23:18:01.416484Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "final case class PersonWithOption(id: Int, name: Option[PersonName]) {\n",
+    "  def greet: String = name.fold(\"Hello\")(n => s\"Hello, ${n.value}\")\n",
+    "}\n",
+    "println(PersonWithOption(4, None).greet)\n",
+    "println(PersonWithOption(5, Some(PersonName(\"Eve\"))).greet)"
+   ],
+   "id": "e4e6652e0a9961e9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hello, Eve\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mPersonWithOption\u001B[39m"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 30
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Takeaways (No NULL references):\n",
+    "- Null encodes “missing type design,” not just “missing data.”\n",
+    "- Immutability + mandatory constructor params eliminate accidental nulls.\n",
+    "- Use distinct tiny classes (Named/Anonymous) or Option for true optionality.\n",
+    "- Fewer sentinel states ⇒ simpler, safer, more maintainable code.\n"
+   ],
+   "id": "eb917cf53c601f7e"
   }
  ],
  "metadata": {
