elegant objects, Smaller and simpler objects

--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -2339,7 +2339,228 @@
     "- Immutability sidesteps the problem: no in-place mutation to protect.\n",
     "- Prefer designing objects so concurrent use only reads shared data or creates new values.\n"
    ],
-   "id": "b1a46bcfae9d63d4"
+   "id": "1ff0f7a7e654fb0a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 2.6.7 Smaller and simpler objects\n",
+    "Immutability keeps objects small: all state must be provided (and validated) up front. Bloated mutable classes hide missing abstractions; immutable ones force early design pressure—when a constructor starts to look ugly, you naturally split the concept.\n"
+   ],
+   "id": "793ed1f94fd54b12"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Anti‑example: a bloated mutable \"God\" object",
+   "id": "d25751b4b658a740"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "// Many roles mixed: parsing, formatting, math, rendering\n",
+    "final class MutableInvoiceBad {\n",
+    "  private var customer: String = _\n",
+    "  private var lines: List[(String, Int, BigDecimal)] = Nil // (item, qty, unit price)\n",
+    "  private var taxRate: BigDecimal = BigDecimal(0)\n",
+    "  private var currency: String = _\n",
+    "  def setCustomer(c: String): Unit = customer = c\n",
+    "  def addLine(desc: String, qty: Int, unit: BigDecimal): Unit = {\n",
+    "    lines = lines :+ (desc -> qty -> unit).asInstanceOf[(String, Int, BigDecimal)] // awkward tuple build\n",
+    "  }\n",
+    "  def setTaxRate(r: BigDecimal): Unit = taxRate = r\n",
+    "  def setCurrency(c: String): Unit = currency = c\n",
+    "  def totalWithTax: BigDecimal = subtotal * (1 + taxRate)\n",
+    "  private def subtotal: BigDecimal = lines.map { case (_, q, u) => u * q }.sum\n",
+    "  override def toString: String = s\"Invoice($customer, ${lines.size} lines, total=$totalWithTax $currency)\"\n",
+    "}\n",
+    "\n",
+    "val mutInv = new MutableInvoiceBad\n",
+    "mutInv.setCustomer(\"ACME\")\n",
+    "mutInv.setCurrency(\"USD\")\n",
+    "mutInv.setTaxRate(BigDecimal(\"0.21\"))\n",
+    "mutInv.addLine(\"Widget\", 3, BigDecimal(10))\n",
+    "mutInv.addLine(\"Gadget\", 1, BigDecimal(25))\n",
+    "println(mutInv) // Order-dependent, half-initialized risk, mixed responsibilities\n"
+   ],
+   "id": "c43c512650eccd9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Problems:\n",
+    "- Setter order matters (temporal coupling reappears).\n",
+    "- Mixed vocabulary (customer, tax, formatting) ⇒ low cohesion.\n",
+    "- Hard to test in partial states; easy to forget one setter.\n"
+   ],
+   "id": "38d1bc3bb47fc5e0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Refactored: tiny immutable value objects",
+   "id": "d1fa787bf5225da1"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-16T14:11:30.293729Z",
+     "start_time": "2025-09-16T14:11:28.193516Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "final case class Customer(name: String)\n",
+    "final case class Currency(code: String)\n",
+    "final case class Line(desc: String, qty: Int, unit: BigDecimal) {\n",
+    "  require(qty > 0)\n",
+    "  def amount: BigDecimal = unit * qty\n",
+    "}\n",
+    "final case class Tax(rate: BigDecimal) { require(rate >= 0 && rate < 1) }\n",
+    "\n",
+    "final case class Invoice(customer: Customer, currency: Currency, tax: Tax, lines: List[Line]) {\n",
+    "  def add(line: Line): Invoice = copy(lines = lines :+ line)\n",
+    "  def net: BigDecimal = lines.map(_.amount).sum\n",
+    "  def gross: BigDecimal = net * (1 + tax.rate)\n",
+    "  override def toString: String = f\"Invoice(${customer.name}, net=$net%.2f, gross=$gross%.2f ${currency.code})\"\n",
+    "}\n",
+    "\n",
+    "val baseInv = Invoice(Customer(\"ACME\"), Currency(\"USD\"), Tax(BigDecimal(\"0.21\")), Nil)\n",
+    "val finalInv = baseInv\n",
+    "  .add(Line(\"Widget\", 3, BigDecimal(10)))\n",
+    "  .add(Line(\"Gadget\", 1, BigDecimal(25)))\n",
+    "println(finalInv) // Construction is a sequence of pure transformations\n"
+   ],
+   "id": "7615e730a994395a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invoice(ACME, net=55.00, gross=66.55 USD)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCustomer\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCurrency\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mLine\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mTax\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mInvoice\u001B[39m\n",
+       "\u001B[36mbaseInv\u001B[39m: \u001B[32mInvoice\u001B[39m = \u001B[33mInvoice\u001B[39m(\n",
+       "  customer = \u001B[33mCustomer\u001B[39m(name = \u001B[32m\"ACME\"\u001B[39m),\n",
+       "  currency = \u001B[33mCurrency\u001B[39m(code = \u001B[32m\"USD\"\u001B[39m),\n",
+       "  tax = \u001B[33mTax\u001B[39m(rate = 0.21),\n",
+       "  lines = \u001B[33mList\u001B[39m()\n",
+       ")\n",
+       "\u001B[36mfinalInv\u001B[39m: \u001B[32mInvoice\u001B[39m = \u001B[33mInvoice\u001B[39m(\n",
+       "  customer = \u001B[33mCustomer\u001B[39m(name = \u001B[32m\"ACME\"\u001B[39m),\n",
+       "  currency = \u001B[33mCurrency\u001B[39m(code = \u001B[32m\"USD\"\u001B[39m),\n",
+       "  tax = \u001B[33mTax\u001B[39m(rate = 0.21),\n",
+       "  lines = \u001B[33mList\u001B[39m(\n",
+       "    \u001B[33mLine\u001B[39m(desc = \u001B[32m\"Widget\"\u001B[39m, qty = \u001B[32m3\u001B[39m, unit = 10),\n",
+       "    \u001B[33mLine\u001B[39m(desc = \u001B[32m\"Gadget\"\u001B[39m, qty = \u001B[32m1\u001B[39m, unit = 25)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Advantages:\n",
+    "- Each class has one reason to change.\n",
+    "- No illegal intermediate state (every instance is valid by construction).\n",
+    "- Extension = add new micro type, not new flags / nullable fields.\n"
+   ],
+   "id": "4eb6ac1ed42f8061"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Constructor pressure exposes design seams\n",
+    "When adding yet another concern (e.g., discounts, shipping, locale) the immutable constructor becomes noisy sooner, nudging a split:"
+   ],
+   "id": "1327d5efa65e7ace"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-16T14:11:35.032877Z",
+     "start_time": "2025-09-16T14:11:33.067135Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "final case class Discount(rate: BigDecimal)\n",
+    "final case class Priced(invoice: Invoice, discount: Discount) {\n",
+    "  def due: BigDecimal = invoice.gross * (1 - discount.rate)\n",
+    "}\n",
+    "val due = Priced(finalInv, Discount(BigDecimal(\"0.10\"))).due\n",
+    "println(f\"Due after discount: $due%.2f USD\")\n"
+   ],
+   "id": "7cd547edc205e5a8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Due after discount: 59.90 USD\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mDiscount\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mPriced\u001B[39m\n",
+       "\u001B[36mdue\u001B[39m: \u001B[32mBigDecimal\u001B[39m = 59.8950"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Instead of swelling Invoice, we composed a new object (Priced). The original stayed simple.\n",
+   "id": "a163da933d8841bf"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Takeaways (Smaller & simpler)\n",
+    "- Immutability discourages massive classes: big constructors look ugly early.\n",
+    "- Cohesion increases: each micro object owns a narrow invariant.\n",
+    "- Growth path is composition (wrap + extend behavior) not accreting fields.\n",
+    "- Fewer lines per class ⇒ faster reading, cheaper refactoring, safer maintenance.\n",
+    "- Simplicity is an emergent property of immutable, single‑purpose objects.\n"
+   ],
+   "id": "24ed00c7e00bb74"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Summary: prefer many tiny immutable classes over a few mutable, multi‑role ones; size stays naturally in check and design intent remains obvious\n",
+   "id": "8272ae6411701725"
   }
  ],
  "metadata": {
