--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -1226,8 +1226,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-09T12:36:55.659125Z",
-     "start_time": "2025-09-09T12:36:54.344185Z"
+     "end_time": "2025-09-17T11:46:09.114435Z",
+     "start_time": "2025-09-17T11:46:08.218975Z"
     }
    },
    "cell_type": "code",
@@ -1272,18 +1272,18 @@
        "  \u001B[33mMoneyKey\u001B[39m(dollars = \u001B[32m5\u001B[39m) -> \u001B[32m\"five\"\u001B[39m,\n",
        "  \u001B[33mMoneyKey\u001B[39m(dollars = \u001B[32m10\u001B[39m) -> \u001B[32m\"ten-again\"\u001B[39m\n",
        ")\n",
-       "\u001B[36mres5_3\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m\n",
-       "\u001B[36mres5_4\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m\n",
+       "\u001B[36mres3_3\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m\n",
+       "\u001B[36mres3_4\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m\n",
        "\u001B[36mfiveKey\u001B[39m: \u001B[32mMoneyKey\u001B[39m = \u001B[33mMoneyKey\u001B[39m(dollars = \u001B[32m5\u001B[39m)\n",
-       "\u001B[36mres5_6\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[33mSome\u001B[39m(value = \u001B[32m\"ten\"\u001B[39m)"
+       "\u001B[36mres3_6\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[33mSome\u001B[39m(value = \u001B[32m\"ten\"\u001B[39m)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -1384,8 +1384,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-08T12:56:37.460686Z",
-     "start_time": "2025-09-08T12:56:36.089745Z"
+     "end_time": "2025-09-17T11:54:26.320308Z",
+     "start_time": "2025-09-17T11:54:25.568318Z"
     }
    },
    "cell_type": "code",
@@ -1421,15 +1421,15 @@
        "defined \u001B[32mclass\u001B[39m \u001B[36mCashImmutable\u001B[39m\n",
        "\u001B[36moriginal\u001B[39m: \u001B[32mCashImmutable\u001B[39m = \u001B[33mCashImmutable\u001B[39m(dollars = \u001B[32m10\u001B[39m, cents = \u001B[32m50\u001B[39m)\n",
        "\u001B[36mtwenty\u001B[39m: \u001B[32mCashImmutable\u001B[39m = \u001B[33mCashImmutable\u001B[39m(dollars = \u001B[32m20\u001B[39m, cents = \u001B[32m100\u001B[39m)\n",
-       "\u001B[36mres2_5\u001B[39m: Helper.this.CashImmutable | scala.Unit = ()"
+       "\u001B[36mres5_5\u001B[39m: Helper.this.CashImmutable | scala.Unit = ()"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -1446,8 +1446,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-08T12:56:31.653062Z",
-     "start_time": "2025-09-08T12:56:29.974709Z"
+     "end_time": "2025-09-17T11:57:31.726003Z",
+     "start_time": "2025-09-17T11:57:31.028214Z"
     }
    },
    "cell_type": "code",
@@ -1496,12 +1496,12 @@
        "\u001B[36matomic\u001B[39m: \u001B[32mCashMutableAtomic\u001B[39m = $30.150"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -1728,8 +1728,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-10T11:29:40.013494Z",
-     "start_time": "2025-09-10T11:29:39.214748Z"
+     "end_time": "2025-09-17T12:03:57.910419Z",
+     "start_time": "2025-09-17T12:03:56.808024Z"
     }
    },
    "cell_type": "code",
@@ -1771,12 +1771,12 @@
        "\u001B[36mtotal\u001B[39m: \u001B[32mCashImmutableTemporal\u001B[39m = \u001B[33mCashImmutableTemporal\u001B[39m(dollars = \u001B[32m30\u001B[39m, cents = \u001B[32m75\u001B[39m)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -1805,8 +1805,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-10T11:38:43.742991Z",
-     "start_time": "2025-09-10T11:38:42.241076Z"
+     "end_time": "2025-09-17T12:13:57.085840Z",
+     "start_time": "2025-09-17T12:13:55.977709Z"
     }
    },
    "cell_type": "code",
@@ -1822,7 +1822,7 @@
     "val dPart: Dollars = { /* many lines... */ Dollars(29) }\n",
     "val cPart: Cents   = { /* many more lines... */ Cents(95) }\n",
     "// Composition happens once, at the point of actual need\n",
-    "val composed = Price(dPart -> cPart)\n",
+    "val composed = Price(dPart -> cPart) // -> infix tuple syntax\n",
     "println(s\"Composed price: $composed\")\n"
    ],
    "id": "49bf21809280f0d6",
@@ -1845,12 +1845,12 @@
        "\u001B[36mcomposed\u001B[39m: \u001B[32mPrice\u001B[39m = \u001B[33mPrice\u001B[39m(parts = (\u001B[33mDollars\u001B[39m(value = \u001B[32m29\u001B[39m), \u001B[33mCents\u001B[39m(value = \u001B[32m95\u001B[39m)))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 22
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -2225,10 +2225,13 @@
    "id": "389044d7f2cc54d3"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-17T12:55:50.138956Z",
+     "start_time": "2025-09-17T12:55:49.076088Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "// Not thread-safe: two fields updated in two steps\n",
     "final class MutableCashTS(private var dollars: Int, private var cents: Int) {\n",
@@ -2250,7 +2253,31 @@
     "latch.countDown() // start both threads\n",
     "pool.shutdown()"
    ],
-   "id": "ebd5a2eb0b6be996"
+   "id": "ebd5a2eb0b6be996",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$60.20\n",
+      "$60.20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mMutableCashTS\u001B[39m\n",
+       "\u001B[36mshared\u001B[39m: \u001B[32mMutableCashTS\u001B[39m = $60.20\n",
+       "\u001B[36mlatch\u001B[39m: \u001B[32mCountDownLatch\u001B[39m = java.util.concurrent.CountDownLatch@63df2017[Count = 0]\n",
+       "\u001B[36mpool\u001B[39m: \u001B[32mExecutorService\u001B[39m = java.util.concurrent.ThreadPoolExecutor@5b3f3e31[Terminated, pool size = 0, active threads = 0, queued tasks = 0, completed tasks = 2]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -2399,6 +2426,12 @@
     "- Hard to test in partial states; easy to forget one setter.\n"
    ],
    "id": "38d1bc3bb47fc5e0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "5d413addcb31ccfb"
   },
   {
    "metadata": {},
